# Vizuara

./: ACTION_ITEMS.md  ARCHITECTURE.md  CONTRIBUTING.md  CURRENT_STATUS.md  Cargo.toml  PHASE1_ROADMAP.md  PHASE2_PROGRESS.md  PHASE6_ANIMATION_REPORT.md  PHASE7_3D_ENHANCEMENT.md  PROJECT_STATUS.md  ROADMAP.md  TASK_MANAGEMENT.md  clippy.toml  plan.md  readme.md  rustfmt.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
docs/: 3D_AXIS_SYSTEM.md
examples/: basic_triangle.rs
examples-package/: Cargo.toml
examples-package/src/: advanced_3d_demo.rs  advanced_charts_demo.rs  animated_visual_demo.rs  animation_demo.rs  area_demo.rs  axis3d_demo.rs  bar_demo.rs  basic_triangle.rs  boxplot_demo.rs  contour_demo.rs  dashboard_demo.rs  demo_3d.rs  density_demo.rs  easy_api_comprehensive_demo.rs  easy_api_demo.rs  easy_api_enhanced_demo.rs  easy_api_scientific_demo.rs  export_demo.rs  heatmap_demo.rs  histogram_demo.rs  interactive_demo.rs  lighting_3d_demo.rs  line_demo.rs  parallel_demo.rs  phase1_demo.rs  pie_demo.rs  radar_demo.rs  real_3d_demo.rs  sankey_demo.rs  theme_demo.rs  theme_visual_demo.rs  theme_visual_demo_final.rs  theme_visual_demo_fixed.rs  theme_visual_demo_new.rs  theme_visual_demo_simple.rs  treemap_demo.rs  violin_demo.rs  visual_demo.rs  volume_demo.rs
vizuara-3d/: Cargo.toml
vizuara-3d/src/: axis3d.rs  camera.rs  lib.rs  lighting.rs  mesh.rs  scatter3d.rs  surface.rs  volume.rs
vizuara-animation/: Cargo.toml
vizuara-animation/src/: easing.rs  keyframe.rs  lib.rs  timeline.rs  transition.rs
vizuara-components/: Cargo.toml
vizuara-components/src/: axis.rs  lib.rs
vizuara-core/: Cargo.toml
vizuara-core/src/: coords.rs  error.rs  lib.rs  primitive.rs  scale.rs  style.rs
vizuara-easy/: Cargo.toml
vizuara-easy/src/: lib.rs  mod2d.rs  mod3d.rs
vizuara-export/: Cargo.toml
vizuara-export/src/: common.rs  error.rs  lib.rs  png.rs  svg.rs
vizuara-interactivity/: Cargo.toml
vizuara-interactivity/src/: events.rs  lib.rs  tools.rs  viewport.rs
vizuara-layout/: Cargo.toml
vizuara-plots/: Cargo.toml
vizuara-plots/src/: area.rs  bar.rs  boxplot.rs  contour.rs  density.rs  heatmap.rs  histogram.rs  lib.rs  line.rs  parallel.rs  pie.rs  radar.rs  sankey.rs  sankey_new.rs  sankey_old.rs  scatter.rs  treemap.rs  treemap_new.rs  treemap_old.rs  violin.rs
vizuara-scene/: Cargo.toml
vizuara-scene/src/: figure.rs  lib.rs  scene.rs
vizuara-themes/: Cargo.toml
vizuara-themes/src/: builder.rs  lib.rs  manager.rs  palette.rs  presets.rs  theme.rs
vizuara-wgpu/: Cargo.toml
vizuara-wgpu/shaders/: axis3d.wgsl  axis3d_plane.wgsl  basic.wgsl  shader_3d.wgsl  shader_3d_lit.wgsl  text3d.wgsl
vizuara-wgpu/src/: lib.rs  renderer.rs  renderer_3d.rs  renderer_3d_lit.rs  shader.rs  vertex.rs
vizuara-wgpu/src/shaders/: basic.wgsl
vizuara-window/: Cargo.toml
vizuara-window/src/: event.rs  figure_window.rs  lib.rs  window.rs  window_3d.rs
