[package]
name = "vizuara-themes"
version = "0.1.0"
edition = "2021"
description = "Theme system for Vizuara visualization library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/HowLi0/Vizuara"

[dependencies]
vizuara-core = { path = "../vizuara-core" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
once_cell = "1.19"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.0"
